@@ -1,7 +1,8 @@
 Changes in Version 0.1.5
 ========================
 plot
- - add function "annotate_xaxis" to utils to add text in line with x tickmarks
+ - add function "annotate_xaxis" to utils: add text in line with x tickmarks
+ - add function "collapse_vertial" to utils: remove space between two subplots
 pycdf
  - fix bug with interpreting indexes with ellipses (var[..., 0] gave the
    wrong result).
